components/jaeger/gateway/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${RELEASE}-ui-redirect
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: http
  hostnames:
    - "${HOSTNAME}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${RELEASE}-ui
  namespace: ${NAMESPACE}
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: default
      sectionName: https
  hostnames:
    - "${HOSTNAME}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jaeger
          port: 16686
